--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-all_runs/*/*.csv
-latest_run/*.csv
+all_runs/*/agentData.csv
+all_runs/*/modelData.csv
+latest_run/agentData.csv
+latest_run/modelData.csv
