--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ all_runs/*/agentData.csv
 all_runs/*/*/agentData.csv
 all_runs/*/modelData.csv
 all_runs/*/*/modelData.csv
+all_runs/*/*/*/modelData.csv
 latest_run/agentData.csv
 latest_run/modelData.csv
 update_values_inflation/build
