dont add non residents transactions to buckets

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ latest_run/modelData.csv
 update_values_inflation/build
 update_values_inflation/dist
 update_values_inflation/update_values_inflation.egg-info
+all.txt
