--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ update_values_inflation/build
 update_values_inflation/dist
 update_values_inflation/update_values_inflation.egg-info
 all.txt
+diff.diff
